--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <section id="home">
-        <h1>Welcome to Computer Store</h1>
+        <h1>Welcome to O-CompS</h1>
         <p>Your destination for the latest electronics, appliances, and more.</p>
         <a href="#products" class="cta">Shop Now</a>
     </section>
@@ -70,4 +70,20 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel elit vitae est bibendum laoreet.</p>
             <a href="#" class="cta">Shop Now</a>
         </div>
-    </
+    </section>
+    <footer>
+        <div class="container">
+            <div class="left-content">
+                <p>&copy; 2023 O-CompS. All rights reserved.</p>
+            </div>
+            <div class="right-content">
+                <ul>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
