--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Computer Store</title>
+    <title>O-CompS Home Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file for styling -->
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#deals">Deals</a></li>
-                <li><a href="#locations">Locations</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="img/o-comps_logo2.png" alt="Best Buy Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Purchase History</a></li>
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="signup.html">Create an Account</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    
     <section id="home">
         <h1>Welcome to O-CompS</h1>
         <p>Your destination for the latest electronics, appliances, and more.</p>
         <a href="#products" class="cta">Shop Now</a>
+    </section>
+    <section id="personal_products">
+        <h2>Based on your recent history</h1>
+            <div class="deal">
+                <img src="img/landing_page/bestseller_product_1.avif" alt="Deal 1">
+                <h3>Deal 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel elit vitae est bibendum laoreet.</p>
+                <a href="#" class="cta">Shop Now</a>
+            </div>
+            <div class="deal">
+                <img src="img/landing_page/bestseller_product_2.avif" alt="Deal 1">
+                <h3>Deal 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel elit vitae est bibendum laoreet.</p>
+                <a href="#" class="cta">Shop Now</a>
+            </div>
+            <div class="deal">
+                <img src="img/landing_page/bestseller_product_3.avif" alt="Deal 1">
+                <h3>Deal 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel elit vitae est bibendum laoreet.</p>
+                <a href="#" class="cta">Shop Now</a>
+            </div>
     </section>
     <section id="products">
         <h2>Our Newest Releases</h2>
