--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><a href="signin.html">Sign In</a></li>
                     <li><a href="signup.html">Create an Account</a></li>
                 </ul>
             </nav>
