--- a/signin.html
+++ b/signin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Sign-Up</title>
+    <title>Sign In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file for styling -->
@@ -10,22 +10,22 @@
             margin: 0;
             padding: 0;
         }
-        .signup-container {
+        .signin-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
         }
-        .signup-form {
+        .signin-form {
             width: 300px;
         }
-        .signup-form input {
+        .signin-form input {
             margin-bottom: 10px;
             padding: 8px;
             width: 100%;
         }
-        .signup-form button {
+        .signin-form button {
             padding: 8px;
             width: 100%;
             background-color: #007bff;
@@ -33,18 +33,18 @@
             border: none;
             cursor: pointer;
         }
-        .signup-form button:hover {
+        .signin-form button:hover {
             background-color: #0056b3;
         }
-        .signup-form p {
+        .signin-form p {
             margin-top: 10px;
             text-align: center;
         }
-        .signup-form a {
+        .signin-form a {
             color: #007bff;
             text-decoration: none;
         }
-        .signup-form a:hover {
+        .signin-form a:hover {
             text-decoration: underline;
         }
     </style>
@@ -64,24 +64,20 @@
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
                     <li><a href="signin.html">Sign In</a></li>
-                    <li><a href="signup.html">Create an Account</a></li>
+                    <li><a href="signin.html">Create an Account</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <div class="signup-container">
-        <h1>Create an Account</h1>
-        <form class="signup-form" action="/signup" method="post">
-            <input type="text" name="firstname" placeholder="First Name" required>
-            <input type="text" name="lastname" placeholder="Last Name" required>
+    <div class="signin-container">
+        <h1>Sign In to O-CompS</h1>
+        <form class="signin-form" action="/signin" method="post">
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-            <input type="tel" name="phone" placeholder="Mobile Phone Number" required>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Sign In</button>
         </form>
-        <p>Already have an account? <a href="/login">Sign in</a></p> 
+        <p><a href="#">Forgot your password?</a></p> 
     </div>
     
     <footer>
