--- a/signin.html
+++ b/signin.html
@@ -64,7 +64,7 @@
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
                     <li><a href="signin.html">Sign In</a></li>
-                    <li><a href="signin.html">Create an Account</a></li>
+                    <li><a href="signup.html">Create an Account</a></li>
                 </ul>
             </nav>
         </div>
