--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="header-container">
             <div class="logo">
-                <img src="img/o-comps_logo2.png" alt="Best Buy Logo">
+                <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">Services</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
@@ -32,7 +31,7 @@
         <a href="#products" class="cta">Shop Now</a>
     </section>
     <section id="personal_products">
-        <h2>Based on your recent history</h1>
+        <h2>Based on your recent history</h2>
             <div class="deal">
                 <img src="img/landing_page/bestseller_product_1.avif" alt="Deal 1">
                 <h3>Deal 1</h3>
@@ -73,7 +72,7 @@
             <a href="#" class="cta">Learn More</a>
         </div>
         <div class="product">
-            <img src="img/landing_page/new_product_4.avif" alt="Product 3">
+            <img src="img/landing_page/new_product_1.avif" alt="Product 3">
             <h3>Product 4</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel elit vitae est bibendum laoreet.</p>
             <a href="#" class="cta">Learn More</a>
@@ -119,7 +118,7 @@
     <script src="chat_script.js"></script>
 
     <footer>
-        <div class="container">
+        <div class="footer-container">
             <div class="left-content">
                 <p>&copy; 2023 O-CompS. All rights reserved.</p>
             </div>
