--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <title>Sign In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file for styling -->
+    <link rel="stylesheet" href="style.css"> 
     <style>
         body {
             margin: 0;
@@ -18,6 +18,7 @@
             height: 100vh;
         }
         .signin-form {
+            padding-bottom: 10px;
             width: 300px;
         }
         .signin-form input {
@@ -53,13 +54,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="img/o-comps_logo2.png" alt="Best Buy Logo">
+                <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">Services</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
