--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <title>User Sign-Up</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file for styling -->
+    <link rel="stylesheet" href="style.css"> 
     <style>
         body {
             margin: 0;
@@ -19,6 +19,7 @@
         }
         .signup-form {
             width: 300px;
+            padding-bottom: 10px;
         }
         .signup-form input {
             margin-bottom: 10px;
@@ -53,13 +54,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="img/o-comps_logo2.png" alt="Best Buy Logo">
+                <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">Services</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
