--- a/signin.html
+++ b/signin.html
@@ -17,6 +17,9 @@
             justify-content: center;
             height: 100vh;
         }
+        .signin-container h1 {
+            padding-bottom: 10px;
+        }
         .signin-form {
             padding-bottom: 10px;
             width: 300px;
@@ -25,17 +28,20 @@
             margin-bottom: 10px;
             padding: 8px;
             width: 100%;
+            border-radius: 5px;
+            width: calc(100% - 20px);
         }
         .signin-form button {
             padding: 8px;
             width: 100%;
-            background-color: #007bff;
+            background-color: #8a00fc;
             color: #fff;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
         }
         .signin-form button:hover {
-            background-color: #0056b3;
+            background-color: #6200b3;
         }
         .signin-form p {
             margin-top: 10px;
@@ -52,7 +58,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="header-container">
             <div class="logo">
                 <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
             </div>
@@ -81,7 +87,7 @@
     </div>
     
     <footer>
-        <div class="container">
+        <div class="footer-container">
             <div class="left-content">
                 <p>&copy; 2023 O-CompS. All rights reserved.</p>
             </div>
