--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <title>User Sign-Up</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             margin: 0;
@@ -70,7 +70,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Purchase History</a></li>
@@ -80,7 +80,7 @@
             </nav>
         </div>
     </header>
-    
+
     <div class="signup-container">
         <h1>Create an Account</h1>
         <form class="signup-form" action="/signup" method="post">
@@ -92,9 +92,9 @@
             <input type="tel" name="phone" placeholder="Mobile Phone Number" required>
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="/login">Sign in</a></p> 
+        <p>Already have an account? <a href="/login">Sign in</a></p>
     </div>
-    
+
     <footer>
         <div class="footer-container">
             <div class="left-content">
