Minor changes on buttons and header

--- a/signin.html
+++ b/signin.html
@@ -60,7 +60,9 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
+                <a href="index.html">
+                    <img src="img/o-comps_logo2.png" alt="O-CompS Logo">
+                </a>
             </div>
             <nav>
                 <ul>
