--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="page_container">
         <div class="content_wrap">
-            <header>
+            <header class="nav_bar">
                 <div class="header-container">
                     <div class="logo">
                         <a href="index.html">
@@ -31,7 +31,7 @@
                     </nav>
                 </div>
             </header>
-            
+
             <section id="home">
                 <h1>Welcome to O-CompS</h1>
                 <p>Your destination for the latest electronics, appliances, and more.</p>
@@ -122,24 +122,23 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <script src="chat_script.js"></script>
 
-        <script src="chat_script.js"></script>
-
-        <footer>
-            <div class="footer-container">
-                <div class="left-content">
-                    <p>&copy; 2023 O-CompS. All rights reserved.</p>
+            <footer>
+                <div class="footer-container">
+                    <div class="left-content">
+                        <p>&copy; 2023 O-CompS. All rights reserved.</p>
+                    </div>
+                    <div class="right-content">
+                        <ul>
+                            <li><a href="#">Terms of Use</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="right-content">
-                    <ul>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
+            </footer>
+        </div> 
     </div>
 
     
