Updated Landing Page and Buttons

--- a/index.html
+++ b/index.html
@@ -89,33 +89,33 @@
                 <h2>Based on your recent history</h2>
                 <div class="personal-deals">
                     <div class="personal-prod">
-                        <a href="#">
+                        <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_1.avif" alt="Deal 1">
                             <p>Lenovo - Legion Pro 5i 16" - 82WK0069US - Onyx Grey</p>
                         </a>
                     </div>
                     <div class="personal-prod">
-                        <a href="#">
+                        <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_2.avif" alt="Deal 1">
                             <p>Arcade1up The Fast & The Furious Deluxe Arcade Game</p>
                         </a>
                     </div>
                     <div class="personal-prod">
-                        <a href="#">
+                        <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_3.avif" alt="Deal 1">
                             <p>Conair - Magnetic Head Trimmer - Silver</p>
                         </a>
                     </div>
                     <div class="personal-prod">
-                        <a href="#">
+                        <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_1.avif" alt="Deal 1">
                             <p>Apple - iPhone 13 5G 128GB (Unlocked) - Midnight</p>
                         </a>
                     </div>
                     <div class="personal-prod">
-                        <a href="#">
+                        <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_2.avif" alt="Deal 1">
-                            <p>Frigidaire - Gallery 1.9 Cu. Ft. Over-the Range Microwave with Air Fry - Smudge Proof Stainless Steel</p>
+                            <p>Frigidaire - Gallery 1.9 Cu. Ft. Over-the Range Microwave</p>
                         </a>
                     </div>
                 </div>
@@ -164,13 +164,13 @@
                     <div class="best_deal">
                         <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_2.avif" alt="Deal 2">
-                            <p>SUPER DUPER PP POO POO MAN 2000</p>
+                            <p>SUPER DUPER POWERFUL PC 69000</p>
                         </a>
                     </div>
                     <div class="best_deal">
                         <a href="#" class="cta">
                             <img src="img/landing_page/bestseller_product_3.avif" alt="Deal 3">
-                            <p>SUPER DUPER NON BINARY RAINBOW FLAG CPU 69000</p>
+                            <p>SUPER DUPER POWERFUL PC 420000</p>
                         </a>
                     </div>
                     <div class="best_deal">
