--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,8 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease-in-out;
+            font-weight: bold;
         }
         .signup-form button:hover {
             background-color: #6200b3;
