--- a/signin.html
+++ b/signin.html
@@ -39,6 +39,8 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease-in-out;
+            font-weight: bold;
         }
         .signin-form button:hover {
             background-color: #6200b3;
