--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="style.css">
+    <script src="chat_script.js"></script>
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
