Added MainLayout. React Router for Sign-In and Sign-Up pages

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="prod-browse-style.css">
+    <link rel="stylesheet" href="signin-style.css">
+    <link rel="stylesheet" href="signup-style.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
